# pointgrey_multicamera_recorder

./: CMakeLists.txt  CMakeLists.txt.old  README.md  README.txt  package.xml
cfg/: ExposureControlDyn.cfg  ExposureControlDyn.cfg.old  PollCameraDyn.cfg
include/poll_cameras/: CamController.h  CamTest.h
include/poll_cameras/not_in_use/: CamController.h  PollCameras.h
launch/: all_cameras.launch  analyze_bags.launch  audio.launch  cam_poll.launch  cam_poll_old.launch  cam_test.launch  cam_test.launch~  cam_test_debug.launch  detect_tags.launch  extrinsic_calibration.launch  just_cameras.launch  record.launch  record_debug.launch  record_high_res.launch  record_unique_bag.launch
src/: #CamController.cpp#  .CamTest.cpp.swp  .broadcast_cameras_node.cpp.swp  .cam_test_node.cpp.swp  CamController.cpp  CamTest.cpp  analyze_bags_node.py  broadcast_cameras_node.cpp  cam_test_node.cpp  hello_world_node.cpp  play_record_process.bash  record.sh  record_and_process.bash  record_and_process_high_res.bash  record_audio_timed.py  variable_play_record_process.bash
src/not_in_use/: CamController.cpp
